--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cymem==2.0.8
 filelock==3.13.1
 fonttools==4.47.2
 fsspec==2023.12.2
+graphviz==0.20.1
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
@@ -56,6 +57,7 @@ torchaudio==2.1.2
 torchinfo==1.8.0
 torchsummary==1.5.1
 torchvision==0.16.2
+torchview==0.2.6
 tqdm==4.66.1
 typer==0.9.0
 tzdata==2023.4
